--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<div class="container">
+    <div class="ui">
+        <div class="score-layout">
+            <div class="score-text">{{ score }}</div>
+        </div>
+    </div>
+</div>
 <canvas #main></canvas>
