--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,3 +29,66 @@
   text-shadow: 5px 5px black;
 }
 
+.game-over-layout {
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.game-over-text {
+  font-size: 5em;
+  color: white;
+  text-shadow: 8px 8px black;
+}
+
+.game-menu-layout {
+  width: 100%;
+  height: 100%;
+  background: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  font-family: 'Segoe UI', Tahoma, sans-serif;
+}
+
+.game-menu-window {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+}
+
+.game-menu-window > img {
+  width: 64px;
+  height: 64px;
+  padding-top: 100px;
+  image-rendering: pixelated;
+}
+
+.game-menu-window > h1 {
+  font-size: 1.6em;
+  line-height: 1.25em;
+  font-weight: 500;
+  color: rgb(32, 33, 36);
+}
+
+.game-menu-window > p, li {
+  margin: 0;
+  font-size: 1em;
+  line-height: 1.55em;
+  color: rgb(95, 99, 104);
+}
+
+.game-menu-window > #error {
+  margin: 0;
+  font-size: 0.8em;
+  line-height: 1.55em;
+  color: rgb(95, 99, 104);
+  margin-top: 12px;
+}
