--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: white;
   margin: 0;
+  padding: 0;
+  overscroll-behavior: none;
 }
