--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div *ngIf="gameOver" class="ui">
-        <div class="game-over-layout">
+        <div class="game-over-layout" (click)="onRestart()">
             <div class="game-over-text">GAME OVER</div>
         </div>
     </div>
