--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
     <div *ngIf="!gameStarted" class="ui">
         <div class="game-menu-layout" (click)="onStart()">
             <div class="game-menu-window">
-<!--                <img src="./raptor.png" />-->
+                <img src="/assets/img/mandalorian.svg" />
                 <h1>No internet</h1>
                 <p>Try:</p>
                 <li>Checking the network cables, modem, and router</li>
@@ -28,4 +28,4 @@
     <canvas #main></canvas>
 </div>
 
-<audio #audio src="assets/sounds/mandalorian.mp3"></audio>
+<audio #audio src="/assets/sounds/mandalorian.mp3"></audio>
