--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,14 +20,18 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  align-items: flex-end;
-}
+  align-items: center;
 
-.score-text {
-  font-size: 1.5em;
-  color: white;
-  padding: 1em;
-  text-shadow: 5px 5px black;
+  & > div {
+    font-size: 1.5em;
+    color: white;
+    padding: 1em;
+    text-shadow: 5px 5px black;
+
+    &.max {
+      opacity: 0.5;
+    }
+  }
 }
 
 .game-over-layout {
