--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <div *ngIf="gameOver" class="ui">
         <div class="game-over-layout" (click)="onRestart()">
             <div class="game-over-text">GAME OVER</div>
+            <img class="return" src="/assets/img/return.png">
         </div>
     </div>
 
