--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,10 +39,18 @@
   width: 100%;
   background: rgba(0, 0, 0, 0.75);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 1;
+
+  & > .return {
+    width: 90px;
+    background: white;
+    border-radius: 3px;
+    margin-top: 20px;
+    padding: 0 0 5px 5px;
+  }
 }
 
 .game-over-text {
