--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   width: 100%;
@@ -8,4 +15,5 @@ body {
   margin: 0;
   padding: 0;
   overscroll-behavior: none;
+  font-family: 'Press Start 2P', cursive;
 }
