--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
         <div *ngIf="!gameStarted" class="ui">
             <div class="game-menu-layout" (click)="onStart()">
                 <div class="game-menu-window">
-                    <img src="/assets/img/mandalorian.svg" />
+                    <span class="icon-mandalorian"></span>
                     <h1>No internet</h1>
                     <p>Try:</p>
                     <li>Checking the network cables, modem, and router</li>
