--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/icons/custom-icons/icons.css";
+
 *,
 *:before,
 *:after {
