fix player jump animation

--- a/src/app/modules/loading/loading.component.html
+++ b/src/app/modules/loading/loading.component.html
@@ -7,4 +7,4 @@
     </div>
 </div>
 
-<audio #audio src="/assets/sounds/sword.mp3"></audio>
+<audio autoplay #audio src="/assets/sounds/sword.mp3"></audio>
