--- a/src/app/modules/loading/loading.component.scss
+++ b/src/app/modules/loading/loading.component.scss
@@ -6,8 +6,9 @@
 }
 
 .container {
-  width: 400px;
+  width: 90%;
   text-align: center;
+  max-width: 400px;
 
   & h3 {
     font-size: 16px;
@@ -20,7 +21,7 @@
 
     & .handle {
       height: 20px;
-      width: 25%;
+      width: 28%;
       background: #777;
       border-radius: 50px;
       border: 4px solid #000;
