--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "assets/icons/custom-icons/icons.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 *,
 *:before,
