--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" #container>
+<div class="main" #main>
     <ng-container *ngIf="!loading; else load" >
         <div class="ui">
             <div class="score-layout">
