--- a/src/app/modules/intro/intro/intro.component.html
+++ b/src/app/modules/intro/intro/intro.component.html
@@ -1,1 +1,10 @@
-<p>intro works!</p>
+<div class="mx-auto max-w-6xl">
+    <div class="flex flex-col items-center">
+        <span>THE</span>
+        <span>MANDALORIAN</span>
+        <div>
+            <button (click)="onPlayGame()">PLAY</button>
+        </div>
+    </div>
+    <img src="/assets/img/mandalorian.png" />
+</div>
