--- a/src/app/modules/intro/intro/intro.component.html
+++ b/src/app/modules/intro/intro/intro.component.html
@@ -7,4 +7,16 @@
         </div>
     </div>
     <img src="/assets/img/mandalorian.png" />
+
+    <div class="social">
+        <div class="item linkedin" (click)="goToSocial('https://www.linkedin.com/in/zhannur-akhmetkhanov-30b709210/')">
+            <span class="icon-linkedin"></span>
+            <span class="text-sm">Linkedin</span>
+        </div>
+
+        <div class="item github" (click)="goToSocial('https://github.com/hogwartsdeveloper')">
+            <span class="icon-github"></span>
+            <span class="text-sm">Github</span>
+        </div>
+    </div>
 </div>
