--- a/src/app/modules/intro/intro/intro.component.html
+++ b/src/app/modules/intro/intro/intro.component.html
@@ -1,7 +1,6 @@
 <div class="mx-auto max-w-6xl">
     <div class="flex flex-col items-center">
-        <span>THE</span>
-        <span>MANDALORIAN</span>
+        <div class="mandalorian">MANDALORIAN</div>
         <div>
             <button (click)="onPlayGame()">PLAY</button>
         </div>
