intro play button

--- a/src/app/modules/intro/intro/intro.component.html
+++ b/src/app/modules/intro/intro/intro.component.html
@@ -1,8 +1,11 @@
 <div class="mx-auto max-w-6xl">
     <div class="flex flex-col items-center">
         <div class="mandalorian">MANDALORIAN</div>
-        <div>
-            <button (click)="onPlayGame()">PLAY</button>
+        <div class="mt-3 mb-5">
+            <a class="play" (click)="onPlayGame()">
+                <span>Play</span>
+                <i></i>
+            </a>
         </div>
     </div>
     <img src="/assets/img/mandalorian.png" />
