--- a/src/app/modules/intro/intro/intro.component.html
+++ b/src/app/modules/intro/intro/intro.component.html
@@ -1,25 +1,22 @@
-<div class="mx-auto max-w-6xl">
-    <div class="flex flex-col items-center">
-        <div class="mandalorian">MANDALORIAN</div>
-        <div class="mt-3 mb-5">
-            <a class="play" (click)="onPlayGame()">
-                <span>Play</span>
-                <i></i>
-            </a>
-        </div>
+<div class="header">
+    <div class="mandalorian">MANDALORIAN</div>
+    <div class="mt-3 mb-5">
+        <a class="play" (click)="onPlayGame()">
+            <span>Play</span>
+            <i></i>
+        </a>
     </div>
-    <img src="/assets/img/mandalorian.png" />
+</div>
 
-    <div class="social">
-        <div class="item linkedin" (click)="goToSocial('https://www.linkedin.com/in/zhannur-akhmetkhanov-30b709210/')">
-            <span class="icon-linkedin"></span>
-            <span class="text-sm">Linkedin</span>
-        </div>
+<div class="social">
+    <div class="item linkedin" (click)="goToSocial('https://www.linkedin.com/in/zhannur-akhmetkhanov-30b709210/')">
+        <span class="icon-linkedin"></span>
+        <span class="text-sm">Linkedin</span>
+    </div>
 
-        <div class="item github" (click)="goToSocial('https://github.com/hogwartsdeveloper')">
-            <span class="icon-github"></span>
-            <span class="text-sm">Github</span>
-        </div>
+    <div class="item github" (click)="goToSocial('https://github.com/hogwartsdeveloper')">
+        <span class="icon-github"></span>
+        <span class="text-sm">Github</span>
     </div>
 </div>
 
