--- a/src/app/modules/loading/loading.component.html
+++ b/src/app/modules/loading/loading.component.html
@@ -1,10 +1,7 @@
 <div class="container">
     <h3>loading... <span>{{ count + '%' }}</span></h3>
-
-    <div class="sword">
-        <div class="handle"></div>
-        <div class="laser"></div>
-    </div>
 </div>
 
-<audio autoplay #audio src="/assets/sounds/sword.mp3"></audio>
+<audio #audio src="/assets/sounds/sword.mp3"></audio>
+
+<canvas #canvas></canvas>
