--- a/src/app/modules/loading/loading.component.scss
+++ b/src/app/modules/loading/loading.component.scss
@@ -2,57 +2,18 @@
   min-height: 100vh;
   display: grid;
   place-items: center;
-  background: black;
 }
 
 .container {
   width: 90%;
   text-align: center;
   max-width: 400px;
+  position: absolute;
+  top: 30%;
 
   & h3 {
     font-size: 16px;
     color: white;
-  }
-
-  & .sword {
-    position: relative;
-    margin-top: 30px;
-
-    & .handle {
-      height: 20px;
-      width: 28%;
-      background: #777;
-      border-radius: 50px;
-      border: 4px solid #000;
-
-      &:before {
-        content: '';
-        position: absolute;
-        top: -10px;
-        left: 88px;
-        height: 40px;
-        width: 20px;
-        background: #ccc;
-        border-radius: 50px;
-        border: 4px solid #000;
-        z-index: 1;
-      }
-    }
-
-    & .laser {
-      position: absolute;
-      top: 3px;
-      left: 100px;
-      height: 13px;
-      width: 75%;
-      background: black;
-      border-bottom-right-radius: 50px;
-      box-shadow: 0 0 0 4px white,
-                  0 0 35px white,
-                  0 0 10px white inset;
-      animation: swordLaser 4s linear;
-    }
   }
 }
 
