--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$game-primary: mat.define-palette(mat.$indigo-palette);
+$game-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$game-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$game-theme: mat.define-light-theme((
+  color: (
+    primary: $game-primary,
+    accent: $game-accent,
+    warn: $game-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($game-theme);
+
 /* You can add global styles to this file, and also import other style files */
 @import "assets/icons/custom-icons/icons.css";
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@@ -23,3 +58,4 @@ body {
   overscroll-behavior: none;
   font-family: 'Press Start 2P', cursive;
 }
+html, body { height: 100%; }
