--- a/src/app/modules/intro/intro/intro.component.html
+++ b/src/app/modules/intro/intro/intro.component.html
@@ -1,23 +1,29 @@
-<div class="header">
-    <div class="mandalorian">MANDALORIAN</div>
-    <div class="mt-3 mb-5">
-        <a class="play" (click)="onPlayGame()">
-            <span>Play</span>
-            <i></i>
-        </a>
-    </div>
+<div class="main" #main>
+    <ng-container *ngIf="!loading">
+        <div class="header">
+            <div class="mandalorian">MANDALORIAN</div>
+            <div class="mt-3 mb-5">
+                <a class="play" (click)="onPlayGame()">
+                    <span>Play</span>
+                    <i></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="social">
+            <div class="item linkedin" (click)="goToSocial('https://www.linkedin.com/in/zhannur-akhmetkhanov-30b709210/')">
+                <span class="icon-linkedin"></span>
+                <span class="text-sm">Linkedin</span>
+            </div>
+
+            <div class="item github" (click)="goToSocial('https://github.com/hogwartsdeveloper')">
+                <span class="icon-github"></span>
+                <span class="text-sm">Github</span>
+            </div>
+        </div>
+    </ng-container>
 </div>
 
-<div class="social">
-    <div class="item linkedin" (click)="goToSocial('https://www.linkedin.com/in/zhannur-akhmetkhanov-30b709210/')">
-        <span class="icon-linkedin"></span>
-        <span class="text-sm">Linkedin</span>
-    </div>
-
-    <div class="item github" (click)="goToSocial('https://github.com/hogwartsdeveloper')">
-        <span class="icon-github"></span>
-        <span class="text-sm">Github</span>
-    </div>
-</div>
-
-<canvas #container></canvas>
+<ng-container *ngIf="loading">
+    <app-loading></app-loading>
+</ng-container>
