--- a/src/app/modules/game/game/game.component.html
+++ b/src/app/modules/game/game/game.component.html
@@ -1,5 +1,5 @@
 <div class="main" #main>
-    <ng-container *ngIf="!loading; else load" >
+    <ng-container *ngIf="!loading">
         <div class="ui">
             <div class="score-layout">
                 <div class="max" *ngIf="maxScore">HI&nbsp;{{ maxScore | score }}</div>
@@ -22,8 +22,8 @@
     </ng-container>
 </div>
 
-<ng-template #load>
+<ng-container *ngIf="loading">
     <app-loading></app-loading>
-</ng-template>
+</ng-container>
 
 <audio #audio src="/assets/sounds/mandalorian.mp3"></audio>
