--- a/src/app/modules/loading/loading.component.scss
+++ b/src/app/modules/loading/loading.component.scss
@@ -5,11 +5,11 @@
 }
 
 .container {
-  width: 90%;
   text-align: center;
-  max-width: 400px;
+  width: 250px;
   position: absolute;
   top: 30%;
+  left: calc(50% - 125px);
 
   & h3 {
     font-size: 16px;
